--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,7 +1,8 @@
 .navbar {
   width: 100%;
   height: 60px;
-  background-color: #29354d;
+  /* background-color: #29354d; */
+  background-color: #000;
 }
 
 .logout {
